--- a/Literature Review/Atrial Fibrillation Poster 22feb.tex
+++ b/Literature Review/Atrial Fibrillation Poster 22feb.tex
@@ -90,7 +90,7 @@
 
 
 \textbf{Atrial Fibrillation} (AF) is a type of cardiac arrhythmia and one of the major causes of stroke and heart failure. AF is also the most widespread cardiac condition, with over 30 million people worldwide suffering from it. In the UK, expenses related to this disease account for more than 1 percent of the total budget of the National Health Service, which is more than 800 million pounds.\\*
- Atrial fibrillation usually manifests itself in patients affected through alterations of the normal cardiac rhythm lasting short periods of time.\\
+ Atrial fibrillation usually manifests itself in patients with abnormal cardiac rhythm lasting short periods of time.\\
 
 
 
