--- a/Literature Review/Atrial Fibrillation Poster 22feb.tex
+++ b/Literature Review/Atrial Fibrillation Poster 22feb.tex
@@ -141,7 +141,7 @@
 \end{column}
 \begin{column}{.54\textwidth}
 \begin{itemize}
-	\item \textbf{\textit{How AF Occurs}}: AF is correlated to the amount of \textbf{ fibrosis}---the scarring of cells. This creates dysfunctional/inactive cells, decreasing the number of connections between cells in the cardiac tissue. This promotes a process called \textit{reentry}, during which, the electric signal wavefront propagation chaotically breaks, initiating fibrillation \cite{Alonso}. Even though many treatments have been developed, the reentry mechanism is not completely understood and, as such, AF remains a major topic in medical research. \\
+	\item \textbf{\textit{How AF Occurs}}: AF is correlated to the amount of \textbf{ fibrosis}---the scarring of cells. This scarring creates dysfunctional/inactive cells, decreasing the number of connections between cells in the cardiac tissue. The absence of connections promotes a process called \textit{reentry}, during which, the electric signal wavefront propagation chaotically breaks, initiating fibrillation \cite{Alonso}. Even though many treatments have been developed, the reentry mechanism is not completely understood and, as such, AF remains a major topic in medical research. \\
 	\end{itemize}
 
 	
