--- a/Sphere Model/New Network With Proper Propagation/heat map.ipynb
+++ b/Sphere Model/New Network With Proper Propagation/heat map.ipynb
@@ -28,7 +28,7 @@
     "import Network_Projection_Appended_modified as c\n",
     "\n",
     "\n",
-    "time_trial=50000\n",
+    "time_trial=100000\n",
     "\n",
     "s = sp.Sphere( recursion_level = 6 )\n",
     "conn = c.Define_Connections(s)\n",
@@ -43,8 +43,24 @@
     "                   excitation = 25, \n",
     "                   hbs = 110)\n",
     "\n",
+    "e=open('heat_dysfgrid','wb')\n",
+    "pickle.dump(n.dysf,e)\n",
+    "e.close()\n",
+    "\n",
+    "f=open('heat_conn','wb')\n",
+    "pickle.dump(n.connections,f)\n",
+    "f.close()\n",
+    "\n",
+    "\n",
+    "\n",
     "runc = c.run(network = n, plot=False,store=True,runs=time_trial,fib_threshold=350)\n",
     "runc.propagate_storageheat(heat_map=True)\n",
+    "\n",
+    "\n",
+    "o=open('heat_exc','wb')\n",
+    "pickle.dump(runc.num_excited,o)\n",
+    "o.close()\n",
+    "\n",
     "\n",
     "\n",
     "\n",
