--- a/AF, risk and restitution 2017 feb/Risk Plots finals.ipynb
+++ b/AF, risk and restitution 2017 feb/Risk Plots finals.ipynb
@@ -155,6 +155,15 @@
     "riskstd=pickle.load(fileobj2)\n",
     "fileobj1.close()\n",
     "fileobj2.close()\n",
+    "\n",
+    "fileobj1 = open('risk_restn1.pkl', 'rb')\n",
+    "fileobj2 = open('riskerrorr_restn1.pkl', 'rb')\n",
+    "risk_restn=pickle.load(fileobj1)\n",
+    "\n",
+    "riskstd_restn=pickle.load(fileobj2)\n",
+    "fileobj1.close()\n",
+    "fileobj2.close()\n",
+    "\n",
     "tau=50\n",
     "delta_l=40000*0.05\n",
     "kishnus=np.sort(kishnu)\n",
@@ -168,16 +177,47 @@
     "ax.set_xlim(xmin=0)\n",
     "ax.set_xlim(xmax=1.1)\n",
     "ax.set_ylim(ymin=-0.1)\n",
-    "ax.plot(kishnus,teo, 'r--', label = 'Theoretical fitting')\n",
+    "\n",
+    "pp=np.arange(0,0.6,0.01)\n",
+    "teo=1-(1-(1-pp)**tau)**((delta_l))\n",
+    "ax.plot(pp,teo, 'r--', label = 'Theoretical fitting')\n",
+    "\n",
     "#plt.errorbar(p_transversalconn,n_fib_avg, yerr=n_fib_err, fmt='o')\n",
-    "ax.plot(kishnu, kishrisk, 'go',markersize=3, label = \"Manani's data\")\n",
-    "ax.errorbar(kishnu, kishrisk, yerr=kisherror,fmt='go',markersize=3.5)\n",
-    "ax.plot(p_transversalconn,risk, 'bo',markersize=3, label = 'Our data')\n",
-    "ax.errorbar(p_transversalconn,risk, yerr=riskstd,fmt='bo',markersize=3.5)\n",
+    "ax.plot(kishnu, kishrisk, 'go',markersize=3.5, label = \"Manani's data\")\n",
+    "ax.errorbar(kishnu, kishrisk, yerr=kisherror,fmt='go',markersize=3)\n",
+    "ax.plot(p_transversalconn,risk, 'bo',markersize=3.5, label = 'Our data')\n",
+    "ax.errorbar(p_transversalconn,risk, yerr=riskstd,fmt='bo',markersize=3)\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_title('Risk Curve')\n",
+    "plt.show()    \n",
+    "\n",
+    "fig1 = plt.figure()\n",
+    "ax = fig1.add_subplot(111)\n",
+    "ax.set_xlabel(\"Percentage of transversal connections\")\n",
+    "ax.set_ylabel(\"Fraction of time in AF\")\n",
+    "ax.set_xlim(xmin=0)\n",
+    "ax.set_xlim(xmax=1.1)\n",
+    "ax.set_ylim(ymin=-0.1)\n",
+    "\n",
+    "pp=np.arange(0,0.6,0.01)\n",
+    "teo=1-(1-(1-pp)**tau)**((delta_l))\n",
+    "ax.plot(pp,teo, 'r--', label = 'Theoretical fitting - no restitution')\n",
+    "\n",
+    "#plt.errorbar(p_transversalconn,n_fib_avg, yerr=n_fib_err, fmt='o')\n",
+    "#ax.plot(kishnu, kishrisk, 'go',markersize=3, label = \"Manani's data\")\n",
+    "#ax.errorbar(kishnu, kishrisk, yerr=kisherror,fmt='go',markersize=3.5)\n",
+    "ax.plot(p_transversalconn,risk, 'bo',markersize=3.5,label = 'Data - no restitution')\n",
+    "ax.errorbar(p_transversalconn,risk, yerr=riskstd,fmt='bo',markersize=3)\n",
+    "\n",
+    "ax.plot(p_transversalconn,risk_restn, 'co',markersize=3.5, label = 'Data - linear restitution')\n",
+    "ax.errorbar(p_transversalconn,risk_restn, yerr=riskstd_restn,fmt='co',markersize=3)\n",
     "\n",
     "ax.legend()\n",
     "ax.set_title('Risk Curve')\n",
     "plt.show()           \n",
+    "        \n",
+    "        \n",
     "        \n",
     "        "
    ]
