--- a/Sphere Model/New Network With Proper Propagation/runstuff.ipynb
+++ b/Sphere Model/New Network With Proper Propagation/runstuff.ipynb
@@ -2,25 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 97.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 97.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0]\n",
-      "<class 'list'>\n",
-      "[96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 97.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 97.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0, 96.0]\n",
-      "<class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(p)\n",
-    "print(type(p))"
+    "import numpy as np\n",
+    "from scipy.sparse import csr_matrix\n",
+    "import operator\n",
+    "from itertools import chain\n",
+    "import time\n",
+    "from matplotlib import animation\n",
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import pylab as pl\n",
+    "from matplotlib import collections  as mc\n",
+    "from mpl_toolkits.mplot3d.art3d import Line3DCollection\n",
+    "import types\n",
+    "import pickle\n",
+    "import ico_prop_projection as sp\n",
+    "import Network_Projection_Appended_modified as c\n",
+    "\n",
+    "\n",
+    "\n",
+    "s = sp.Sphere( recursion_level = 6 )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "conn = c.Define_Connections(s)\n",
+    "colours, vconn, hconn, pent_ind = conn.define_connections()\n",
+    "\n",
+    "n = c.create_network(array_nodesindices = np.arange(len(colours)),\n",
+    "                   array_vertical = vconn,\n",
+    "                   array_transv = hconn,\n",
+    "                   p_transv = 0.2,\n",
+    "                   impulse_start = pent_ind,\n",
+    "                   p_dysf = 0.05,\n",
+    "                   p_unexcitable = 0.05,\n",
+    "                   excitation = 25, \n",
+    "                   hbs = 110)\n",
+    "conn.connectome()"
    ]
   },
   {
@@ -52,16 +77,7 @@
     }
    ],
    "source": [
-    "fileobj1.close()\n",
-    "namepickle='heat_maps'+str(3)+'.pkl'\n",
-    "fileobj1 = open(namepickle, 'rb')\n",
-    "l=pickle.load(fileobj1)\n",
-    "fileobj1.close()\n",
-    "indices=np.flatnonzero(l[:,3])\n",
-    "print(type(indices))\n",
-    "print(indices)\n",
     "\n",
-    "print(l[indices,3])\n",
     "\n",
     "\n",
     "#p=p[0]\n",
@@ -222,23 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'create_network' object has no attribute 'plot_sphere_a'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ba15038d05d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m                    \u001b[0mexcitation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m                    hbs = 110)\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot_sphere_a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'final_results19x5000'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'create_network' object has no attribute 'plot_sphere_a'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.sparse import csr_matrix\n",
@@ -297,10 +301,104 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "from scipy.sparse import csr_matrix\n",
+    "import operator\n",
+    "from itertools import chain\n",
+    "import time\n",
+    "from matplotlib import animation\n",
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import pylab as pl\n",
+    "\n",
+    "import types\n",
+    "import pickle\n",
+    "\n",
+    "import copy\n",
+    "\n",
+    "kishmatrix = np.array([[0.02,0.99981,4.3015e-06],\n",
+    "[0.04,0.99983,3.8088e-06],\n",
+    "[0.06,0.9998,1.0454e-05],\n",
+    "[0.08,0.99968,3.0663e-05],\n",
+    "[0.11,0.99772,0.00044859],\n",
+    "[0.13,0.96099,0.018246],\n",
+    "[0.15,0.60984,0.054379],\n",
+    "[0.17,0.16381,0.041092],\n",
+    "[0.19,0.017807,0.0080603],\n",
+    "[0.21,0.020737,0.016513],\n",
+    "[0.23,4.922e-05,4.8685e-05],\n",
+    "[0.25,0.0001084,8.4968e-05],\n",
+    "[0.27,0,0],\n",
+    "[0.29,0,0],\n",
+    "[0.12,0.99152,0.0027053],\n",
+    "[0.14,0.86184,0.028043],\n",
+    "[0.16,0.29714,0.055185],\n",
+    "[0.18,0.039206,0.013863],\n",
+    "[0.2,0.0056277,0.0028284],\n",
+    "[0.22,4.834e-05,3.6005e-05],\n",
+    "[0.24,0.00082172,0.00081342],\n",
+    "[0.26,0,0],\n",
+    "[0.28,0,0],\n",
+    "[0.3,9.406e-05,9.3115e-05],\n",
+    "[0.1,0.99919,0.00010423]])\n",
+    "\n",
+    "kishnu = kishmatrix[:,0]\n",
+    "kishrisk = kishmatrix[:,1]\n",
+    "kisherror = kishmatrix[:,2]\n",
+    "p_transversalconn= kishnu #np.arange(0,0.6,0.05) #nu\n",
+    "p_transversalconn= list(kishnu) #np.arange(0,0.6,0.05) #nu\n",
+    "p_transversalconn.append(0.01)\n",
+    "p_transversalconn.append(0.005)\n",
+    "np.asarray(p_transversalconn)\n",
+    "\n",
+    "extra_nu = [0.195, 0.205,0.215, 0.225, 0.235, 0.245,0.32, 0.34]\n",
+    "m_trans_conn = p_transversalconn.copy()\n",
+    "for nu in extra_nu:\n",
+    "    m_trans_conn.append(nu)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "t=open('risk_sph_run1.pkl','rb')\n",
+    "r=pickle.load(t)\n",
+    "t.close()\n",
+    "\n",
+    "\n",
+    "t=open('riskerror_sph_run1.pkl','rb')\n",
+    "u=pickle.load(t)\n",
+    "t.close()\n",
+    "fig1 = plt.figure()\n",
+    "ax = fig1.add_subplot(111)\n",
+    "ax.set_xlabel(\"Percentage of transversal connections\")\n",
+    "ax.set_ylabel(\"Fraction of time in AF\")\n",
+    "ax.set_xlim(xmin=0)\n",
+    "ax.set_xlim(xmax=1.1)\n",
+    "ax.set_ylim(ymin=-0.1)\n",
+    "\n",
+    "pp=np.arange(0,0.6,0.01)\n",
+    "\n",
+    "delta_l=(20480-2*640)*0.05\n",
+    "tau=25\n",
+    "teo=1-(1-(1-pp)**tau)**((delta_l))\n",
+    "ax.plot(pp,teo, 'r--', label = 'Theoretical fitting ')\n",
+    "\n",
+    "print(len(m_trans_conn))\n",
+    "print(len(r))\n",
+    "ax.plot(m_trans_conn,r, 'bo',markersize=3.5,label = 'Data')\n",
+    "ax.errorbar(m_trans_conn,r, yerr=u,fmt='bo',markersize=3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_title('Risk Curve')\n",
+    "plt.show()           "
+   ]
   }
  ],
  "metadata": {
