--- a/AF, risk and restitution 2017 feb/Risk Plots finals.ipynb
+++ b/AF, risk and restitution 2017 feb/Risk Plots finals.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import FinalAF\n",
+    "\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import pickle\n",
@@ -70,84 +70,7 @@
     "t_in_fib = []\n",
     "\n",
     "#fileobj0 = open('realizationdata', 'wb')\n",
-    "\"\"\"\n",
-    "for elements in p_transversalconn:\n",
-    "    print(\"Nu = %s\" %(elements))\n",
     "\n",
-    "    average=[]\n",
-    "    singlemeasures=[]\n",
-    "    t_fib_temp = [] #list of times in fibrillation\n",
-    "    af_number = []  #list of fibrillation times\n",
-    "    number_fib = [] #number of systems in fibrillation\n",
-    "  \n",
-    "    systems=FinalAF.heart(200,0.05,1-elements,0.05)\n",
-    "\n",
-    "   \n",
-    "    for i in range(number_of_systems):\n",
-    "        print(i)\n",
-    "        \n",
-    "        dysfgrids.append(systems.dysfgrid)\n",
-    "        fibrosisgrids.append(systems.edgegrid)\n",
-    "    \n",
-    "        systemsrun=FinalAF.run(systems,False,True,time,False)\n",
-    "        \n",
-    "        timeinfib = systemsrun.timeinfibrillation()\n",
-    "        listoffib = systemsrun.tfibrillation\n",
-    "        n_fib = len(listoffib)\n",
-    "        systems.reinitialise()\n",
-    "        t_fib_temp.append(timeinfib)\n",
-    "        \n",
-    "\n",
-    "        singlemeasures.append(timeinfib/float(time))\n",
-    "        af_number.append(listoffib)\n",
-    "        if n_fib > 0:\n",
-    "            number_fib.append(1)\n",
-    "        else:\n",
-    "            number_fib.append(0)\n",
-    "     \n",
-    "    t_in_fib.append(t_fib_temp)\n",
-    "    t_fib_data.append(af_number)\n",
-    "    \n",
-    "    n_fib_data.append(number_fib)\n",
-    "    n_fib_avg.append(np.mean(np.array(number_fib)))\n",
-    "    n_fib_err.append(np.std(np.array(number_fib))/((number_of_systems)**(0.5)))\n",
-    "    average=np.mean(np.array(singlemeasures))\n",
-    "    std=np.std(np.array(singlemeasures))/((len(singlemeasures))**(0.5)) #Standard Error of the mean\n",
-    "    risk.append(average)\n",
-    "    riskstd.append(std)\n",
-    "\n",
-    "risk=np.array(risk)\n",
-    "\n",
-    "fileobj0 = open('listoffibrillationtimes.pkl', 'wb')\n",
-    "fileobj1 = open('risk.pkl', 'wb')\n",
-    "fileobj2 = open('riskerrorr.pkl', 'wb')\n",
-    "fileobj4 = open('numberfibrillations.pkl', 'wb')\n",
-    "fileobj5 = open('nfibaverage.pkl', 'wb')\n",
-    "fileobj6 = open('nfiberr.pkl', 'wb')\n",
-    "fileobj7 = open('tinfib.pkl', 'wb')\n",
-    "fileobj8 = open('dysfgrids.pkl', 'wb')\n",
-    "fileobj9 = open('fibrosisgrids.pkl', 'wb')\n",
-    "\n",
-    "pickle.dump(t_fib_data, fileobj0, -1)\n",
-    "pickle.dump(risk, fileobj1, -1)\n",
-    "pickle.dump(riskstd, fileobj2, -1)\n",
-    "pickle.dump(n_fib_data, fileobj4, -1)\n",
-    "pickle.dump(n_fib_avg, fileobj5, -1)\n",
-    "pickle.dump(n_fib_err, fileobj6, -1)\n",
-    "pickle.dump(t_in_fib, fileobj7, -1)\n",
-    "pickle.dump(dysfgrids, fileobj8, -1)\n",
-    "pickle.dump(fibrosisgrids, fileobj9, -1)\n",
-    "\n",
-    "fileobj1.close()\n",
-    "fileobj2.close()\n",
-    "fileobj4.close()\n",
-    "fileobj0.close()\n",
-    "fileobj5.close()\n",
-    "fileobj6.close()\n",
-    "fileobj7.close()\n",
-    "fileobj8.close()\n",
-    "fileobj9.close()\n",
-    "\"\"\"\n",
     "fileobj1 = open('risk.pkl', 'rb')\n",
     "fileobj2 = open('riskerrorr.pkl', 'rb')\n",
     "risk=pickle.load(fileobj1)\n",
@@ -166,8 +89,7 @@
     "\n",
     "tau=50\n",
     "delta_l=40000*0.05\n",
-    "kishnus=np.sort(kishnu)\n",
-    "teo=1-(1-(1-kishnus)**tau)**((delta_l))\n",
+    "\n",
     "\n",
     "    \n",
     "fig = plt.figure()\n",
@@ -177,20 +99,116 @@
     "ax.set_xlim(xmin=0)\n",
     "ax.set_xlim(xmax=1.1)\n",
     "ax.set_ylim(ymin=-0.1)\n",
-    "\n",
     "pp=np.arange(0,0.6,0.01)\n",
     "teo=1-(1-(1-pp)**tau)**((delta_l))\n",
-    "ax.plot(pp,teo, 'r--', label = 'Theoretical fitting')\n",
-    "\n",
-    "#plt.errorbar(p_transversalconn,n_fib_avg, yerr=n_fib_err, fmt='o')\n",
-    "ax.plot(kishnu, kishrisk, 'go',markersize=3.5, label = \"Manani's data\")\n",
-    "ax.errorbar(kishnu, kishrisk, yerr=kisherror,fmt='go',markersize=3)\n",
-    "ax.plot(p_transversalconn,risk, 'bo',markersize=3.5, label = 'Our data')\n",
+    "ax.plot(pp,teo, 'r--', label = 'theoretical fit')\n",
+    "ax.plot(kishnu, kishrisk, 'g^',markersize=3.5, label = \"Christensen/Manani's data\")\n",
+    "ax.errorbar(kishnu, kishrisk, yerr=kisherror,fmt='g^',markersize=3)\n",
+    "ax.plot(p_transversalconn,risk, 'bo',markersize=3.5, label = 'data from the simulation')\n",
     "ax.errorbar(p_transversalconn,risk, yerr=riskstd,fmt='bo',markersize=3)\n",
-    "\n",
     "ax.legend()\n",
     "ax.set_title('Risk Curve')\n",
     "plt.show()    \n",
+    "\n",
+    "\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import pickle\n",
+    "from matplotlib import pyplot as plts\n",
+    "#Kishan'f Data\n",
+    "kishmatrix = np.array([[0.02,0.99981,4.3015e-06],\n",
+    "[0.04,0.99983,3.8088e-06],\n",
+    "[0.06,0.9998,1.0454e-05],\n",
+    "[0.08,0.99968,3.0663e-05],\n",
+    "[0.11,0.99772,0.00044859],                 \n",
+    "[0.13,0.96099,0.018246],\n",
+    "[0.15,0.60984,0.054379],\n",
+    "[0.17,0.16381,0.041092],\n",
+    "[0.19,0.017807,0.0080603],\n",
+    "[0.21,0.020737,0.016513],\n",
+    "[0.23,4.922e-05,4.8685e-05],\n",
+    "[0.25,0.0001084,8.4968e-05],\n",
+    "[0.27,0,0],\n",
+    "[0.29,0,0],\n",
+    "[0.12,0.99152,0.0027053],\n",
+    "[0.14,0.86184,0.028043],\n",
+    "[0.16,0.29714,0.055185],\n",
+    "[0.18,0.039206,0.013863],\n",
+    "[0.2,0.0056277,0.0028284],\n",
+    "[0.22,4.834e-05,3.6005e-05],\n",
+    "[0.24,0.00082172,0.00081342],\n",
+    "[0.26,0,0],\n",
+    "[0.28,0,0],\n",
+    "[0.3,9.406e-05,9.3115e-05],\n",
+    "[0.1,0.99919,0.00010423]])\n",
+    "\n",
+    "\n",
+    "kishnu = kishmatrix[:,0]\n",
+    "kishrisk = kishmatrix[:,1]\n",
+    "kisherror = kishmatrix[:,2]\n",
+    "p_transversalconn= list(kishnu) #np.arange(0,0.6,0.05) #nu\n",
+    "p_transversalconn.append(0.01)\n",
+    "p_transversalconn.append(0.005)\n",
+    "np.asarray(p_transversalconn)\n",
+    "\n",
+    "\n",
+    "time=100000\n",
+    "number_of_systems=50\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "dysfgrids=[]\n",
+    "fibrosisgrids=[]\n",
+    "\n",
+    "risk=[] \n",
+    "riskstd=[]\n",
+    "t_fib_data = []\n",
+    "t_fib_temp = []\n",
+    "number_fib = []\n",
+    "n_fib_data = []\n",
+    "n_fib_avg = []\n",
+    "n_fib_err = []\n",
+    "t_in_fib = []\n",
+    "\n",
+    "#fileobj0 = open('realizationdata', 'wb')\n",
+    "\n",
+    "fileobj1 = open('risk.pkl', 'rb')\n",
+    "fileobj2 = open('riskerrorr.pkl', 'rb')\n",
+    "risk=pickle.load(fileobj1)\n",
+    "\n",
+    "riskstd=pickle.load(fileobj2)\n",
+    "fileobj1.close()\n",
+    "fileobj2.close()\n",
+    "\n",
+    "fileobj1 = open('risk_restn1.pkl', 'rb')\n",
+    "fileobj2 = open('riskerrorr_restn1.pkl', 'rb')\n",
+    "risk_restn=pickle.load(fileobj1)\n",
+    "\n",
+    "riskstd_restn=pickle.load(fileobj2)\n",
+    "fileobj1.close()\n",
+    "fileobj2.close()\n",
+    "\n",
+    "tau=50\n",
+    "delta_l=40000*0.05\n",
+    "pp=np.arange(0,0.6,0.01)\n",
+    "teo=1-(1-(1-pp)**tau)**((delta_l))\n",
+    "\n",
+    "    \n",
+    "\n",
     "\n",
     "fig1 = plt.figure()\n",
     "ax = fig1.add_subplot(111)\n",
@@ -200,23 +218,24 @@
     "ax.set_xlim(xmax=1.1)\n",
     "ax.set_ylim(ymin=-0.1)\n",
     "\n",
-    "pp=np.arange(0,0.6,0.01)\n",
-    "teo=1-(1-(1-pp)**tau)**((delta_l))\n",
-    "ax.plot(pp,teo, 'r--', label = 'Theoretical fitting - no restitution')\n",
+    "\n",
+    "ax.plot(pp,teo, 'r--', label = 'theoretical fit - no restitution')\n",
+    "#tau=25\n",
+    "#teo=1-(1-(1-pp)**tau)**((delta_l))\n",
+    "#ax.plot(pp,teo, 'r--', label = 'Theoretical fitting - min restitution')\n",
     "\n",
     "#plt.errorbar(p_transversalconn,n_fib_avg, yerr=n_fib_err, fmt='o')\n",
     "#ax.plot(kishnu, kishrisk, 'go',markersize=3, label = \"Manani's data\")\n",
     "#ax.errorbar(kishnu, kishrisk, yerr=kisherror,fmt='go',markersize=3.5)\n",
-    "ax.plot(p_transversalconn,risk, 'bo',markersize=3.5,label = 'Data - no restitution')\n",
+    "ax.plot(p_transversalconn,risk, 'bo',markersize=3.5,label = 'data - no restitution')\n",
     "ax.errorbar(p_transversalconn,risk, yerr=riskstd,fmt='bo',markersize=3)\n",
     "\n",
-    "ax.plot(p_transversalconn,risk_restn, 'co',markersize=3.5, label = 'Data - linear restitution')\n",
-    "ax.errorbar(p_transversalconn,risk_restn, yerr=riskstd_restn,fmt='co',markersize=3)\n",
+    "ax.plot(p_transversalconn,risk_restn, 'cs',markersize=3.5, label = 'data - linear restitution')\n",
+    "ax.errorbar(p_transversalconn,risk_restn, yerr=riskstd_restn,fmt='cs',markersize=3)\n",
     "\n",
     "ax.legend()\n",
     "ax.set_title('Risk Curve')\n",
     "plt.show()           \n",
-    "        \n",
     "        \n",
     "        \n",
     "        "
